# llm-operational-metrics

./: .env-example  .env-sample  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
llm_operational_metrics/: hosting.py
llm_operational_metrics/metric_generator/: inference_chat_completion_metric_generator.py  openai_metric_generator.py
llm_operational_metrics/models/: chat_completion_operational_metric.py
llm_operational_metrics/protocols/: i_azure_openai_service.py  i_azure_phi3_service.py
llm_operational_metrics/services/: azure_openai_service.py  azure_phi3_service.py
samples/: azure_openai_service.py  azure_phi3_service.py
tests/llm_operational_metrics/services/: test_azure_openai_service.py  test_azure_phi3_service.py
